--- a/Eticaret/Web.config
+++ b/Eticaret/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Eticaret-20230103090152.mdf;Initial Catalog=aspnet-Eticaret-20230103090152;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=203-Anonim;Initial Catalog=Eticaret;user id=sa;password=12345;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ETicaretEntities" connectionString="metadata=res://*/Models.EticaretModel.csdl|res://*/Models.EticaretModel.ssdl|res://*/Models.EticaretModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=203-Anonim;initial catalog=ETicaret;user id=sa;password=12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
